# middleware/validation.js
@@ -13,6 +13,17 @@ const profileValidationRules = () => {
     ];
 };
 
+const workoutValidationRules = () => {
+    return [
+        body("profileId").isString().isLength({ min:24, max:24}).withMessage("Profile must be a 24 digit string"),
+        body("exercise").isString().withMessage("exercise must be a string"),
+        body("sets").isNumeric().withMessage("Sets must be a number"),
+        body("reps").isNumeric().withMessage("Reps must be a number"),
+        body("weight").isNumeric().withMessage("Weight must be a number"),
+        body("date").matches(/^\d{4}-\d{2}-\d{2}$/).withMessage("Date must be format yyyy-mm-dd")
+    ]
+}
+
 const validate = (req, res, next) => {
     const errors = validationResult(req);
     if(!errors.isEmpty()) {
@@ -23,5 +34,6 @@ const validate = (req, res, next) => {
 
 module.exports = {
     profileValidationRules,
+    workoutValidationRules,
     validate
 }
